feat: add info log of alerting service
This closes gravitee-io/issues#63

--- a/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/config/gravitee.yml
+++ b/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/config/gravitee.yml
@@ -309,3 +309,20 @@ user:
 
 search:
   data: ${gravitee.home}/data
+
+notifiers:
+  email:
+    enabled: true
+    subject: ${email.subject}
+    host: ${email.host}
+    port: ${email.port}
+    from: ${email.from}
+    username: ${email.username}
+    password: ${email.password}
+
+alerts:
+  vertx:
+    enabled: false
+    hazelcast:
+      config:
+        path: ${gravitee.home}/config/hazelcast.xml
